fix: fix swagger authentication
