# swagger_doc.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "title": "Projeto Final de Back-End",
-    "description": "Documentação das rotas presentes no prjeto final utilizando o Swagger",
+    "description": "Documentação das rotas presentes no projeto final utilizando o Swagger",
     "version": "1.0.0"
   },
   "servers": [
@@ -218,6 +218,11 @@
             "description": "Internal Server Error"
           }
         },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
